--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,17 @@ pnpm-debug.log*
 # Editor directories and files
 .idea
 .vscode
+venv
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
